# ros2_turtlesim

ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/custom_interfaces1/share/custom_interfaces1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/my_py_pkg/share/my_py_pkg/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/custom_interfaces1/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces1/srv/: SetLed.srv
ros2_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_pkg/src/: add_two_ints_client_oop.cpp  add_two_ints_server.cpp  robot_news_station.cpp  smartphone.cpp  target_coordinates_publisher.cpp
ros2_ws/src/my_py_pkg/: package.xml  setup.py
ros2_ws/src/my_py_pkg/my_py_pkg/: add_two_ints_client_no_oop.py  add_two_ints_client_oop.py  add_two_ints_server.py  battery.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  robot_news_station.py  smartphone.py  target_coordinates_publisher.py
ros2_ws/src/my_py_pkg/my_py_pkg/install/: setup.bash  (+3 more)
ros2_ws/src/my_robot_bringup/: CMakeLists.txt
ros2_ws/src/turtlesim_catch_them_all/: setup.py
ros2_ws/src/turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py  turtle_spawner.py
(+150 files in other folders)
